--- a/styles/main.css
+++ b/styles/main.css
@@ -419,8 +419,12 @@
   border-radius: 3px;
   background: #FFF;
   cursor: default;
-  -webkit-box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
-          box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+  -webkit-box-shadow: inset 0 0 1px #FFF,
+ inset 0 1px 7px #EBEBEB,
+ 0 3px 6px -3px #BBB;
+          box-shadow: inset 0 0 1px #FFF,
+ inset 0 1px 7px #EBEBEB,
+ 0 3px 6px -3px #BBB;
   -webkit-transition: 300ms ease 0s;
   -moz-transition: 300ms ease 0s;
   -ms-transition: 300ms ease 0s;
@@ -4867,6 +4871,10 @@ Created using IcoMoon - icomoon.io
   text-align: center;
 }
 
+.profile-page .category-subprofile {
+  text-align: left;
+}
+
 .profile-page h5.description {
   max-width: 700px;
   margin: 20px auto 75px;
@@ -7179,7 +7187,7 @@ Created using IcoMoon - icomoon.io
 .cc-education .cc-education-header {
   padding-top: 60px;
   padding-right: 0;
-  text-align: center;
+  text-align: left;
   color: #fff;
 }
 
